--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,28 @@ android {
         applicationId "com.alphagao.watchdog"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    signingConfigs {
+        myConfigs {
+            storeFile file(System.properties['keyStore'])
+            storePassword System.properties['keyStorePassword']
+            keyAlias System.properties['keyAlias']
+            keyPassword System.properties['keyAliasPassword']
+        }
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.myConfigs
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "watchDog_${variant.versionName}_${variant.name}.apk"
         }
     }
 }
