--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ buildscript {
     }
 }
 
+ext{
+    versionCode = "$VERSION_CODE".toInteger()
+    versionName = "$VERSION_NAME"
+}
+
 allprojects {
     repositories {
         google()
